# matlabpy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/matlabpy/: __init__.py  matlabpy.py
tests/: test.py  test_matlabpy.py
