[project]
name = "matlabpy"
version = "0.0.6"
description = "A Python library for MATLAB integration"
repository = "https://github.com/wealing/matlabpy"
authors = [
    {name = "Daniel F. Hernández Gardiol",email = "dan.fhg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "matlabpy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
